2004-06-24  Mike Kestner  <mkestner@ximian.com>

	* en/GLib/Timeout.xml : finish the class and Add docs.

2004-06-24  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : add back the enumtype Value__ fields with "Do not use"
	docs.  Monodoc doesn't show these nodes as fields, but needs them for
	non-int enums.

2004-06-24  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : kill all the dead files where types have been removed.
	Mark several gtkhtml types as being in gtkhtml-sharp, not gtk-sharp.
	Another 601 dead TBAs.

2004-06-24  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : document event args classes and ctors via script-fu. 
	Knocks off another 944 TBAs.

2004-06-24  Jamin Philip Gray <jamin@pubcrawler.org>

	* en/Gdk/EventButton.xml : documented members.

2004-06-23  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : document event handler delegates via script-fu. 400 TBAs.

2004-06-21  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : document ctor(GType) members via script-fu. 476 TBAs.

2004-06-21  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : document GType props via script-fu. 620 TBAs killed.

2004-06-19  Larry Ewing  <lewing@ximian.com>

	* en/Gnome/CanvasItem.xml: update the documentation no that
	the binding has been fixed.

	* en/Gdk/Pixdata.xml: fixup the Pixdata docs now that the binding
	is fixed.

2004-06-19  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/*.xml: fix examples so they compile, are children of
	<remarks /> so they are editable and spaced right, and some
	miscellaneous fixes and updates

2004-06-17  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/Window.xml : document remaining TBAs.

2004-06-17  Mike Kestner  <mkestner@ximian.com>

	* scan-deprecations.cs : kill value__ fields of enum types too.
	* en/*/*.xml : remove value__ fields from enum types. 400 more tba's.

2004-06-15  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : generated summary and remarks for all the On* virtual