@@ -548,10 +548,14 @@ class LayoutSample : DrawingArea
         <Parameter Name="index_" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="index_">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:Pango.Rectangle" /></returns>
-        <remarks>To be added</remarks>
+        <summary>Obtains the graphical position of an offset in the <see cref="T:Pango.Layout" />.</summary>
+        <param name="index_">a byte offset within the text buffer.</param>
+        <returns>a <see cref="T:Pango.Rectangle" /> representing the position of the grapheme associated with <paramref name="index_" />.</returns>
+        <remarks>
+          <para>
+The X coordinate of the resulting <see cref="T:Pango.Rectangle" /> represents the leading edge of the grapheme.  If the direction of the grapheme is right to left, the Width value will be negative.
+</para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="GetLogAttrs">
