@@ -1,5 +1,9 @@
 2004-06-24  Mike Kestner  <mkestner@ximian.com>
 
+	* en/Pango/Layout.xml : document IndexToPosition.
+
+2004-06-24  Mike Kestner  <mkestner@ximian.com>
+
 	* en/GLib/Timeout.xml : finish the class and Add docs.
 
 2004-06-24  Mike Kestner  <mkestner@ximian.com>
